--- a/Introdução JavaScript/6 - Operadores lógicos.html
+++ b/Introdução JavaScript/6 - Operadores lógicos.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        // AND => &&, OR => || , NOT => !=
+
+        var sexo = 'M', idade = 18;
+
+        if(sexo === 'M' && idade >= 18) {
+            console.log('OK')
+        }
+    </script>
 </body>
 </html>
